add Core developers.

--- a/AUTHORS
+++ b/AUTHORS
@@ -3,10 +3,12 @@ cocos2dx-win8 authors
 (ordered by the join in time)
 
 Core developers:
-    Fengsheng Yang
+    Fengsheng Yang (dev-yarin)
+    Yanyu Gong (gyy444)
     Hexuan Li (lihex)
     WenSheng Yang
     Honghui Zhang
+    Zhihua Dang (EricCartman)
 
 Developers:
     Bin Zhang
